working on Project constructor
save/load projects from json

save project, save output and variables

show project on load

refactored front-end browse function, added id to project obj, new project selects itself on create in project selector

developing ui

relative paths, auto-save

added kss, working on getting build working

Build Style Guide
* Styleguide builds with static css path atm
* Added data-attr on ui inputs to hold absolute path used for building

project selector, project switching

added stylesheets field

save and load blocks, rendering style guide elements

passing string with styleguide_block function. Not ideal, but works for now

keep project loaded when clicking between tabs, compiled css input

copy and rename compiled css to output dir

--- a/server/assets/stylesheets/app.sass
+++ b/server/assets/stylesheets/app.sass
@@ -1,2 +1,11 @@
-h1
-  color: red
+@import mixins
+
+@import defaults
+@import utilities
+
+@import header
+@import project-selector
+@import nav
+@import content
+@import forms
+@import block
