SQLite and Layout Update
added sqlite, schema, project create and load uses db

CRUD routes for blocks, load, save, create blocks

load/add blocks to ui, crud project routes

block template, update block

use blocks in guide generation, changed to sidebar layout

--- a/server/assets/stylesheets/_content.sass
+++ b/server/assets/stylesheets/_content.sass
@@ -1,5 +1,8 @@
 .content
-  clear: both
+  position: relative
+  top: 1px
+  left: 25%
+  width: 75%
   height: 380px
   padding-top: 55px
   background-color: rgba(white, 0.8)
