--- a/server/assets/stylesheets/_nav.sass
+++ b/server/assets/stylesheets/_nav.sass
@@ -1,40 +1,33 @@
 $blue         : #376c9b
 
 nav
+  position: absolute
+  top: 1px
+  width: 25%
+  height: 100%
+  background-color: #222
+
   ul
-    margin: 1px 0
+    margin: 20px 0 0
     padding: 0
     list-style: none
 
   li
-    float: left
-    width: 50%
-    height: 60px
-    border-bottom: 4px solid transparent
-    line-height: 64px
-    background-color: rgba(white, 0.6)
-    color: rgba($text-gray, 0.8)
-    font-size: 18px
-    font-weight: 500
-    text-align: center
-    text-transform: uppercase
+    padding: 5px 20px
+    color: #CCC
     +transition
-
-    &:nth-child(2)
-      position: relative
-      left: 1px
 
     &:hover:not(.nav-active)
       cursor: pointer
 
-  li:hover,
-  .nav-active
-    border-color: $blue
-    background-color: rgba(white, 0.8)
-    color: $blue
+  // li:hover,
+  // .nav-active
+  //   border-color: $blue
+  //   background-color: rgba(white, 0.8)
+  //   color: $blue
 
-  .btn-add-tab
-    position: relative
-    left: 1px
-    width: 10%
-    font-size: 30px
+  .build-project-container
+    position: absolute
+    bottom: 0
+    left: 10%
+    width: 80%
