Haute gem, Blocks section, General UI & UX updates
added haute, color blocks to template

css/sass icons, blocks ui/ux

Delete Projects & Blocks

--- a/server/assets/stylesheets/_block.sass
+++ b/server/assets/stylesheets/_block.sass
@@ -1,12 +1,58 @@
+.page-blocks
+  height: 380px
+  margin-top: -55px
+  overflow-y: auto
+
+.blocks
+  margin: 0
+  padding: 0
+  list-style: none
+
 .block
-  width: 70%
-  margin: 0 auto
+  position: relative
+  background-color: white
+  border-bottom: 1px solid #CCC
 
-  input,
-  textarea
-    width: 100%
+.block-title-container
+  width: 100%
+  cursor: pointer
+  +transition
+
+  &:hover
+    background-color: #EEE
+    
+    .btn-delete
+      opacity: 1
+      +transition
+
+  .btn-delete
+    position: absolute
+    top: 12px
+    right: 10px
+    opacity: 0
+
+  input
+    width: 50%
+    padding: 10px 20px
+    border: none
+    background-color: transparent
     font-size: 20px
+    cursor: pointer
 
-  textarea
-    height: 100px
-    margin-top: 10px
+.block-editor
+  width: 100%
+  height: 50px
+
+.btn-add-block
+  width: 100%
+  border: 0
+  padding: 10px 20px
+  background-color: #24BF5B
+  color: white
+  font-size: 20px
+  text-align: center
+  cursor: pointer
+  +transition
+
+  &:hover
+    background-color: darken(#24BF5B, 10%)
