--- a/server/assets/stylesheets/_defaults.sass
+++ b/server/assets/stylesheets/_defaults.sass
@@ -10,3 +10,17 @@ body
   padding: 0
   background-image: url(../images/bg.jpg)
   font-family: "Avenir Next"
+
+.btn-delete
+  outline: none
+  border-radius: 2px
+  border: 0
+  padding-top: 2px
+  padding-bottom: 4px
+  background-color: #BF0404
+  color: white
+  cursor: pointer
+  +transition
+
+  &:hover
+    background-color: darken(#BF0404, 10%)
