--- a/server/views/blocks.haml
+++ b/server/views/blocks.haml
@@ -1,4 +1,3 @@
-.js-blocks-page
-  %button.js-add-block Add Block
-
+.page-blocks.js-blocks-page
   %ul.blocks
+  %button.btn-add-block.js-add-block Add Block
