--- a/server/views/project.haml
+++ b/server/views/project.haml
@@ -3,7 +3,7 @@
     %input.compiled-css-location.js-browse-for-file{placeholder: "compiled css location", readonly: true}
 
   .stylesheets-location-container.form-group
-    %input.stylesheets-location.js-browse-for-folder{placeholder: "stylesheets location", readonly: true}
+    %input.stylesheets-location.js-browse-for-folder{placeholder: "stylesheets directory location", readonly: true}
 
   .variables-location-container.form-group
     %input.variables-location.js-browse-for-file{placeholder: "variables location", readonly: true}
