--- a/server/assets/stylesheets/_project-selector.sass
+++ b/server/assets/stylesheets/_project-selector.sass
@@ -11,12 +11,15 @@
   ul
     list-style: none
     min-width: 175px
+    max-height: 350px
+    overflow-y: auto
     margin: 0
     padding: 0
     background-color: white
 
   li
-    padding: 10px 0
+    position: relative
+    padding: 10px 38px 7px
     border-bottom: 1px solid #cccccc
     color: #585858
     cursor: pointer
@@ -29,6 +32,16 @@
     &:hover
       background-color: #eeeeee
       color: #0e1130
+
+    &:hover
+      button
+        opacity: 1
+
+    button
+      position: absolute
+      top: 10px
+      right: 10px
+      opacity: 0
 
 .project-selector-heading
   padding: 4px 0 2px
