Some Finishing Touches Before First Beta Release
* added local webfont
* sidebar items hover/active state
* display example html in built style guide
* build confirmation message
* copy css & js assets on build
* icon

--- a/server/assets/stylesheets/_defaults.sass
+++ b/server/assets/stylesheets/_defaults.sass
@@ -1,3 +1,7 @@
+@font-face
+  font-family: 'Montserrat'
+  src: url('../fonts/Montserrat-Regular.ttf') format('truetype')
+
 html
   box-sizing: border-box
 
@@ -8,8 +12,8 @@ html
 body
   margin: 0
   padding: 0
-  background-image: url(../images/bg.jpg)
-  font-family: "Avenir Next"
+  // background-image: url(../images/bg.jpg)
+  font-family: "Montserrat"
 
 .btn-delete
   outline: none
