--- a/server/views/index.haml
+++ b/server/views/index.haml
@@ -26,6 +26,7 @@
           %li{data: { href: "template" }} Template
           %li{data: { href: "blocks" }} Blocks
         
+        %h5.js-build-complete Build complete!
         .build-project-container.form-group
           %button.build-project Build!
 
