--- a/cocoa-rack/Base.lproj/MainMenu.xib
+++ b/cocoa-rack/Base.lproj/MainMenu.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="13E28" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
         <plugIn identifier="com.apple.WebKitIBPlugin" version="6250"/>
     </dependencies>
@@ -15,10 +14,10 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <menu title="AMainMenu" systemMenu="main" id="29">
             <items>
-                <menuItem title="haute-osx" id="56">
-                    <menu key="submenu" title="haute-osx" systemMenu="apple" id="57">
+                <menuItem title="Haute" id="56">
+                    <menu key="submenu" title="Haute" systemMenu="apple" id="57">
                         <items>
-                            <menuItem title="About haute-osx" id="58">
+                            <menuItem title="About Haute" id="58">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="orderFrontStandardAboutPanel:" target="-2" id="142"/>
@@ -37,7 +36,7 @@
                             <menuItem isSeparatorItem="YES" id="144">
                                 <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                             </menuItem>
-                            <menuItem title="Hide haute-osx" keyEquivalent="h" id="134">
+                            <menuItem title="Hide Haute" keyEquivalent="h" id="134">
                                 <connections>
                                     <action selector="hide:" target="-1" id="367"/>
                                 </connections>
@@ -56,7 +55,7 @@
                             <menuItem isSeparatorItem="YES" id="149">
                                 <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                             </menuItem>
-                            <menuItem title="Quit haute-osx" keyEquivalent="q" id="136">
+                            <menuItem title="Quit Haute" keyEquivalent="q" id="136">
                                 <connections>
                                     <action selector="terminate:" target="-3" id="449"/>
                                 </connections>
@@ -703,7 +702,7 @@
             <modifierMask key="keyEquivalentModifierMask"/>
             <menu key="submenu" title="Help" systemMenu="help" id="491">
                 <items>
-                    <menuItem title="haute-osx Help" keyEquivalent="?" id="492">
+                    <menuItem title="Haute Help" keyEquivalent="?" id="492">
                         <connections>
                             <action selector="showHelp:" target="-1" id="493"/>
                         </connections>
