--- a/_middleman/source/index.html.haml
+++ b/_middleman/source/index.html.haml
@@ -10,9 +10,9 @@ body_class: index
     %h1
       Haute OS X
     %h2 A GUI to help create style guides for web projects.
-    = link_to "assets/Haute.zip", class: "btn-download btn btn-outline-white" do
+    %button.btn-download.btn.btn-outline-white
       .initial-state
-        Download Alpha 0.1.0
+        Coming Soon!
       .hover-state
         %i.fa.fa-apple
         OS X 10.7+
