--- a/server/assets/stylesheets/_defaults.sass
+++ b/server/assets/stylesheets/_defaults.sass
@@ -12,7 +12,7 @@ html
 body
   margin: 0
   padding: 0
-  background-image: url(../images/bg.jpg)
+  // background-image: url(../images/bg.jpg)
   font-family: "Montserrat"
 
 .btn-delete
